--- a/index1.html
+++ b/index1.html
@@ -21,7 +21,7 @@
                 <a href="index1.html" title="NTU">NTU</a>
             </h1>
         </div>
-        <div class="title">
+        <div class="标题">
             <h1>Welcome to Sports & Recreation Centre!</h1>
         </div>
     </header>
